# VisionSearch

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: main.py  search_service.py
deploy/: README_hf.md
docs/: eval_report.md  interview-notes.md  theory-note.md
docs/superpowers/plans/: 2026-06-25-visionsearch-week1.md  2026-06-25-visionsearch-week2.md  2026-06-25-visionsearch-week3.md  2026-06-25-visionsearch-week4.md  2026-06-25-visionsearch-week5.md  2026-06-25-visionsearch-week6.md  2026-06-25-visionsearch-week7.md  2026-06-25-visionsearch-week8.md
docs/superpowers/specs/: 2026-06-25-visionsearch-design.md
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  mockResults.js
scripts/: build_index.py  check_env.py  download_data.py  evaluate.py  prepare_deploy.py  qualitative.py  sanity_overfit.py  train.py  visualize_batch.py
src/visionsearch/: __init__.py  config.py
src/visionsearch/data/: dataset.py  flickr30k.py  transforms.py
src/visionsearch/eval/: recall.py  retrieval.py
src/visionsearch/index/: faiss_index.py
src/visionsearch/models/: dual_encoder.py  encoders.py  heads.py
src/visionsearch/train/: loss.py  trainer.py
tests/: conftest.py  test_annotations.py  test_backend.py  test_config.py  test_dataset.py  test_dual_encoder.py  test_encoders.py  test_faiss_index.py  test_heads.py  test_loss.py  test_recall.py  test_retrieval.py  test_trainer.py
